<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.primerapp.SecondActivity" >

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="38dp"
        android:text="@string/lbl_nombre" />

    <EditText
        android:id="@+id/txt_nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lbl_nombre"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/lbl_nombre"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbl_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_nombre"
        android:layout_below="@+id/lbl_nombre"
        android:layout_marginTop="18dp"
        android:text="@string/lbl_apellido" />

    <EditText
        android:id="@+id/txt_apellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_apellido"
        android:layout_alignBottom="@+id/lbl_apellido"
        android:layout_alignLeft="@+id/txt_nombre2"
        android:layout_alignRight="@+id/txt_edad2"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lbl_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbl_mail"
        android:layout_below="@+id/txt_apellido2"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_edad" />

    <EditText
        android:id="@+id/txt_edad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_edad"
        android:layout_alignBottom="@+id/lbl_edad"
        android:layout_alignLeft="@+id/txt_mail2"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/lbl_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_apellido"
        android:layout_below="@+id/txt_edad2"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_mail" />

    <EditText
        android:id="@+id/txt_mail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_mail"
        android:layout_alignBottom="@+id/lbl_mail"
        android:layout_alignLeft="@+id/txt_nombre2"
        android:ems="10"
        android:inputType="textEmailAddress" />

</RelativeLayout>
